--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="cards_text">
                         <h3 class="card_title">Publiconceptos<span class="point">.</span></h3>
                         <p class="card_date">27 de noviembre del 2023</p>
-                        <p class="card_copy">En colaboración del dueño del negocio "Publiconceptos Reyes", Francisco Reyes, hemos impulzado su marca por medio de contenido en redes sociales para incrementar su presencia y alcance para futuras ventas.</p>
+                        <p class="card_copy">En colaboración del dueño del negocio "Publiconceptos Reyes", Francisco Reyes, hemos impulsado su marca por medio de contenido en redes sociales para incrementar su presencia y alcance para futuras ventas.</p>
                         <a href="https://www.tiktok.com/@publiconceptosreyes" class="card_button">Ver el contenido destacado</a>
                     </div>
                 </div>
