Mejora del diseño responsivo

--- a/index.html
+++ b/index.html
@@ -145,13 +145,12 @@
                                 <p class="testimony_position">Director de Publiconceptos</p>
                             </div>
                         </div>
-                    </div>
+                    </div> 
                     <div class="testimony_card">
                         <div class="testimony_text">
                             <img src="img/matheando.svg" class="google_logo">
                             <p class="testimony_history"> "Desde que empecé a trabajar
-                                en mi proyecto comencé a obtener resultados increíbles. Ahora he
-                                llegado a un mejor aprendizaje y he ayudado con él a mis clientes."</p>
+                                en mi proyecto obtuve resultados increíbles. He llegado a un mejor aprendizaje y ayudado a mis clientes."</p>
                             <div class="testimony_copy testimony_copy-modifier">
                                 <img src="img/first-person.jpg" class="testimony_logo logo-picture">
                                 <div class="testimony_info">
