Actualización del responsive

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <div class="cards_text">
                             <p class="card_list">Content Marketing - Redes sociales</p>
                             <h3 class="card_title">Estrategia de Presencia Online<span class="point">.</span></h3>
-                            <p class="card_copy">Conectamos tu marca con la audiencia correcta a través de estrategias de marketing digital que resuenan por todo internet. Desde la gestión de creación de contenido para tus redes sociales hasta conseguir más clientes para tu negocio, nuestro objetivo es incrementar tu visibilidad online y fomentar un compromiso con tus seguidores.</p>
+                            <p class="card_copy">Conectamos tu marca con la audiencia correcta mediante estrategias de marketing digital. Gestionamos contenido para redes sociales, aumentando clientes y visibilidad online. Fomentamos compromiso y lealtad entre tus seguidores, impulsando el crecimiento y éxito de tu negocio.</p>
                             <a href="https://www.figma.com/file/txDz8kvSQYyB2fsVmSka9F/Matheando?type=design&mode=design&t=N8E9SqjbMcO2WuHy-1" class="card_button">¡Usamos Figma!</a>
                         </div>
                     </div>
@@ -141,16 +141,15 @@
                         <div class="testimony_copy">
                             <iconify-icon icon="bx:at" class="testimony_logo"></iconify-icon>
                             <div class="testimony_info">
-                                <h3 class="testimony_name">Francisco Reyes</h3>
-                                <p class="testimony_position">Director de Publiconceptos</p>
+                                <h3 class="testimony_name">Fran. Reyes</h3>
+                                <p class="testimony_position">Dueño de Publiconceptos</p>
                             </div>
                         </div>
                     </div> 
                     <div class="testimony_card">
                         <div class="testimony_text">
                             <img src="img/matheando.svg" class="google_logo">
-                            <p class="testimony_history"> "Desde que empecé a trabajar
-                                en mi proyecto obtuve resultados increíbles. He llegado a un mejor aprendizaje y ayudado a mis clientes."</p>
+                            <p class="testimony_history">"Desde que comencé mi proyecto, he logrado resultados sorprendentes que han mejorado mi aprendizaje y ayudado a mis clientes de manera significativa."</p>
                             <div class="testimony_copy testimony_copy-modifier">
                                 <img src="img/first-person.jpg" class="testimony_logo logo-picture">
                                 <div class="testimony_info">
@@ -194,12 +193,6 @@
     </main>
     <footer class="footer">
         <div class="container footer_caption">
-            <section class="download">
-                <h3 class="title_footer">Más información:</h3>
-                <div class="footer_copy">
-                    <p class="copyright">Luis Daniel Olmos Gutiérrez &copy; 2024 Todos los derechos reservados</p>
-                </div>
-            </section>
             <section class="get-email">
                 <h3 class="title_footer">¿Estás listo para trabajar con nosotros?</h3>
                 <div class="socialmedia">
