Ajustes finales del diseño responsivo

--- a/index.html
+++ b/index.html
@@ -171,21 +171,21 @@
                     <i class='bx bx-check'></i>
                     <div class="check_numbers">
                         <p class="check_number">+Aprendizaje</p>
-                        <p class="check_copy">No nos conformamos</p>
+                        <p class="check_copy">No conformarce</p>
                     </div>
                 </div>
                 <div class="check_item">
                     <i class='bx bx-check'></i>
                     <div class="check_numbers">
                         <p class="check_number">+Atención</p>
-                        <p class="check_copy">Para apoyar a clientes</p>
+                        <p class="check_copy">Apoyar a clientes</p>
                     </div>
                 </div>
                 <div class="check_item">
                     <i class='bx bx-check'></i>
                     <div class="check_numbers">
                         <p class="check_number">+Presentación</p>
-                        <p class="check_copy">Para vender más</p>
+                        <p class="check_copy">Vender más</p>
                     </div>
                 </div>
             </div> 
