--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <i class='bx bx-check'></i>
                     <div class="check_numbers">
                         <p class="check_number">+Presentación</p>
-                        <p class="check_copy">Vender más</p>
+                        <p class="check_copy">Para vender más</p>
                     </div>
                 </div>
             </div> 
