--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <section class="get-email">
                 <h3 class="title_footer">¿Estás listo para trabajar con nosotros?</h3>
                 <div class="socialmedia">
-                    <p class="socialmedia_legend">Síguenos en:</p>
+                    <p class="socialmedia_legend">Síguenos:</p>
                     <i class='socialmedia_icon bx bxl-facebook-circle'></i>
                     <i class='socialmedia_icon bx bxl-linkedin-square'></i>
                     <i class='socialmedia_icon bx bxl-instagram'></i>
