Corrección del Formulario

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <div class="cards_text">
                             <p class="card_list">Content Marketing - Redes sociales</p>
                             <h3 class="card_title">Estrategia de Presencia Online<span class="point">.</span></h3>
-                            <p class="card_copy">Conectamos tu marca con la audiencia correcta mediante estrategias de marketing digital. Gestionamos contenido para redes sociales, aumentando clientes y visibilidad online. Fomentamos compromiso y lealtad entre tus seguidores, impulsando el crecimiento y éxito de tu negocio.</p>
+                            <p class="card_copy">Ampliamente nos encargamos de conectar tu marca con la audiencia correcta mediante estrategias de marketing digital. Gestionamos tu contenido para redes sociales, aumentando clientes y la visibilidad online. Fomentamos compromiso y lealtad entre tus seguidores, impulsando el crecimiento y éxito de tu querido negocio.</p>
                             <a href="https://www.figma.com/file/txDz8kvSQYyB2fsVmSka9F/Matheando?type=design&mode=design&t=N8E9SqjbMcO2WuHy-1" class="card_button">¡Usamos Figma!</a>
                         </div>
                     </div>
