Actualización de texto e imágenes

--- a/Matheando/Matheando.html
+++ b/Matheando/Matheando.html
@@ -102,7 +102,7 @@
 
         <section class="course container">
             <figure class="course__picture course__picture--right">
-                <img src="img/Algebra.png" class="course__img">
+                <img src="img/Algebra.jpg" class="course__img">
             </figure>
             <div class="course__about course__picture--left">       
                 <h2 class="title">¿De qué va este contenido?</h2>
@@ -140,7 +140,7 @@
             </div>
 
             <p class="footer__copyright">
-                Sitio web creado por &copy; Luis Daniel Olmos Gutiérrez:
+                Creado por &copy; Luis Daniel Olmos Gutiérrez:
             </p>
         </div>
     </footer>
