--- a/index.html
+++ b/index.html
@@ -162,9 +162,27 @@
                 </div>
             </div>
         </section>
-        <section id="correo" class="email container container-modifier">
+        <section id="correo" class="container container-modifier">
             <h2 class="subtitle subtitle-modifier">Somos una excelente opción para adoptar la transformación digital<span class="point">.</span></h2>
             <p class="copy_section copy_section-modifier">Nos enfocamos en aprender constantemente para implementar soluciones óptimas, desarrollando con las tecnologías adecuadas para cada tarea.</p>
+            <div class="slider-frame">
+                <ul>
+                    <li><img src="img/certificados/img1.png" alt=""></li>
+                    <li><img src="img/certificados/img2.png" alt=""></li>
+                    <li><img src="img/certificados/img3.png" alt=""></li>
+                    <li><img src="img/certificados/img4.png" alt=""></li>
+                    <li><img src="img/certificados/img5.png" alt=""></li>
+                    <li><img src="img/certificados/img6.png" alt=""></li>
+                    <li><img src="img/certificados/img7.png" alt=""></li>
+                    <li><img src="img/certificados/img8.png" alt=""></li>
+                    <li><img src="img/certificados/img9.png" alt=""></li>
+                    <li><img src="img/certificados/img10.png" alt=""></li>
+                    <li><img src="img/certificados/img11.png" alt=""></li>
+                    <li><img src="img/certificados/img12.png" alt=""></li>
+                    <li><img src="img/certificados/img13.png" alt=""></li>
+                    <li><img src="img/certificados/img14.png" alt=""></li>
+                </ul>
+            </div>
             <a href="https://wa.me/5510212943" class="cta-modifier">¡Mándanos mensaje!</a>
             <div class="check">
                 <div class="check_item">
@@ -188,7 +206,7 @@
                         <p class="check_copy">Para vender más</p>
                     </div>
                 </div>
-            </div> 
+            </div>         
         </section>
     </main>
     <footer class="footer">
@@ -225,4 +243,5 @@
     </footer>
 </body>
 <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+<script src="script/script.js"></script>
 </html>
