--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
         <section id="inicio" class="container hero_main">
             <div class="hero_textos">
-                <h1 class="title">Al aprendizaje es <span class="title_active">Nuestra Prioridad.</span></h1>
+                <h1 class="title">Aprender es <span class="title_active">Nuestra Prioridad.</span></h1>
                 <p class="copy">Nos encargamos de <span class="copy_active">ayudar e implementar</span></p>
                 <a href="https://wa.me/5510212943" class="cta">¡Mándanos mensaje!</a>
             </div>
