Corrección del formulario

--- a/Formulario/Formulario.html
+++ b/Formulario/Formulario.html
@@ -82,7 +82,7 @@
 
             <!--Error-->
             <div class="Formulario__mensaje" id="Formulario__mensaje">
-                <p><i class="fas fa-exclamation-triangle"></i><b> Error: </b>Rellene correctamente el formulario.</p>
+                <p><i class="fas fa-exclamation-triangle"></i><b> Error: </b>Rellene correctamente.</p>
             </div>
 
             <!--Botón-->
