--- a/Formulario/Formulario.html
+++ b/Formulario/Formulario.html
@@ -34,7 +34,7 @@
 
             <!--Grupo password 1-->
             <div class="Formulario__grupo" id="Grupo__password">
-                <label for="Password" class="Formulario__label">Contaseña</label>
+                <label for="Password" class="Formulario__label">Contraseña</label>
                 <div class="Formulario__grupo-input">
                     <input type="password" class="Formulario__input" name="Password" id="Password" placeholder="">
                     <i class="Formulario__validacion-estado fas fa-times-circle"></i>
